# traffic-lifelong

./: .gitignore  README.md  analyse_results.py  default.config  interactive_event_validator.py  main.py  pyproject.toml  run_analysis.py  run_extraction.py
annotation/: annotations.xml
utils/: __init__.py  base.py  config.py  event_extraction.py  event_merge.py  geometry_utils.py  io_utils.py  path_utils.py  scene_config.py  tracking.py  video_preparation.py  video_utils.py
