[project]
name = "traffic-lifelong"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyring>=25.7.0",
    "pycountry>=24.6.1",
    "pycryptodomex>=3.23.0",
    "pytubefix>=10.3.5",
    "secretstorage>=3.5.0",
    "yt-dlp>=2025.11.12",
]
