[project]
name = "traffic-lifelong"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyring>=25.7.0",
    "lap>=0.5.13",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pycountry>=24.6.1",
    "pycryptodomex>=3.23.0",
    "pytesseract>=0.3.13",
    "pytubefix>=10.3.5",
    "secretstorage>=3.5.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.38",
    "yt-dlp>=2025.11.12",
]
